Fix margin on mobile nav

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -102,6 +102,7 @@ nav {
       justify-content: flex-start;
       position: fixed;
       inset: 0 0 0 30%;
+      margin: 0;
       padding: 25vh 2em;
       z-index: 1000;
       transform: translateX(100%);
