--- a/scss/styles.css
+++ b/scss/styles.css
@@ -116,6 +116,7 @@ nav button {
             justify-content: flex-start;
     position: fixed;
     inset: 0 0 0 30%;
+    margin: 0;
     padding: 25vh 2em;
     z-index: 1000;
     -webkit-transform: translateX(100%);
